fixed collapsed navbar

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -53,9 +53,7 @@ nav ul a:hover{
   color: $red;
 }
 
-nav{
 
-}
 .navbar-collapse {
   text-align:center;
 }
